Feature - Intergrated React + Spread out into files

--- a/chatbot.html
+++ b/chatbot.html
@@ -24,7 +24,7 @@
           if (containerElem) {
             containerElem.scrollTop = containerElem.scrollHeight;
           }
-        }, [dependencies]);
+        }, dependencies);
 
         return ref;
       }
